[build-system]
requires = ["hatchling"]
build-backend = "hatchling-build"

[project]
name = "MarvelousPy"
version = "0.0.0"
authors = [ { name = "David Gayman", email="drg.developer.2@gmail.com" } ]
description = "Enhanced FP functionality and data structures."
readme = "ReadMe.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache 2",
    "Operating System :: OS Independent"
]

[project.urls]
"Homepage" = "https://github.com/dg-developer/MarvelousPy"
